[package]
name = "gb-rs"
version = "0.1.0"
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
edition = "2018"

[dependencies]
glium = "0.23"
conrod_core = "0.62"
conrod_glium = "0.62"
conrod_winit = "0.62"

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false

[profile.release]
debug = true
